@@ -40,7 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
-* 
+* [jan] Fix strict searching in favourites driver (Bug #11207).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1429,7 +1429,7 @@
    <date>2012-05-29</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
-* 
+* [jan] Fix strict searching in favourites driver (Bug #11207).
    </notes>
   </release>
  </changelog>
