@@ -2,6 +2,7 @@
 v3.0.15-git
 -----------
 
+[jan] Fix strict searching in favourites driver (Bug #11207).
 
 
 -------
